# sogrim

./: pong.html  pyproject.toml  requirements.txt
app/: Sogrim.py
